# hydra

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING-STARTED.md  HYDRA-ASTRAL-MATHEMATICS.md  README.md  com.agentra.hydra.plist  docker-compose.yml
crates/animus/: Cargo.toml
crates/animus/src/: lib.rs
crates/animus/tests/: animus_tests.rs  animus_tests_extra.rs
crates/hydra-adversary/: Cargo.toml
crates/hydra-adversary/src/: antibody.rs  antifragile.rs  constants.rs  ecology.rs  errors.rs  immune.rs  lib.rs  threat.rs
crates/hydra-adversary/tests/: adversary.rs
crates/hydra-animus/: Cargo.toml
crates/hydra-animus/src/: constants.rs  errors.rs  lib.rs
crates/hydra-animus/tests/: animus.rs
crates/hydra-antifragile/: Cargo.toml
crates/hydra-antifragile/src/: constants.rs  errors.rs  lib.rs  obstacle.rs  record.rs  store.rs
crates/hydra-attention/: Cargo.toml
crates/hydra-attention/src/: allocator.rs  budget.rs  constants.rs  engine.rs  errors.rs  frame.rs  lib.rs  loop_bridge.rs  scorer.rs
crates/hydra-attribution/: Cargo.toml
crates/hydra-attribution/src/: avoidable.rs  cause.rs  constants.rs  cost.rs  engine.rs  errors.rs  lib.rs  tree.rs
crates/hydra-automation/: Cargo.toml
crates/hydra-automation/src/: constants.rs  engine.rs  errors.rs  generator.rs  lib.rs  observation.rs  pattern.rs  proposal.rs
crates/hydra-autonomy/: Cargo.toml
crates/hydra-autonomy/src/: autonomy_tests.rs  lib.rs
crates/hydra-axiom/: Cargo.toml
crates/hydra-axiom/src/: constants.rs  errors.rs  functor.rs  lib.rs  morphisms.rs  primitives.rs  synthesis.rs
crates/hydra-axiom/tests/: axiom.rs
crates/hydra-belief/: Cargo.toml
crates/hydra-belief/src/: belief.rs  conflict.rs  constants.rs  errors.rs  lib.rs  manifold.rs  postulates.rs  revision.rs  store.rs  store_tests.rs
crates/hydra-belief/tests/: agm_property.rs  belief.rs  belief_tests.rs  belief_tests_extra.rs
crates/hydra-browser/: Cargo.toml
crates/hydra-browser/src/: action.rs  captcha.rs  computer_use.rs  constants.rs  engine.rs  errors.rs  fingerprint.rs  human.rs  lib.rs  limiter.rs  login.rs  page.rs  pool.rs  session.rs  style_extract.rs  vision.rs  warmup.rs
crates/hydra-browser/tests/: browser.rs
crates/hydra-cache/: Cargo.toml
crates/hydra-cache/src/: batching.rs  batching_tests.rs  compression.rs  compression_tests.rs  intent_cache.rs  intent_cache_tests.rs  lib.rs
crates/hydra-calibration/: Cargo.toml
crates/hydra-calibration/src/: adjuster.rs  beta.rs  bias.rs  constants.rs  engine.rs  errors.rs  lib.rs  persistence.rs  record.rs
crates/hydra-cartography/: Cargo.toml
crates/hydra-cartography/src/: atlas.rs  constants.rs  errors.rs  lib.rs  profile.rs  system_class.rs  topology.rs
crates/hydra-cli/: Cargo.toml
crates/hydra-cli/src/: banner.rs  cli_dispatch.rs  cli_flags.rs  cli_subcommands.rs  client.rs  colors.rs  main.rs  output.rs  repl.rs  spinner.rs
crates/hydra-cli/tests/: cli_tests.rs
crates/hydra-collective/: Cargo.toml
crates/hydra-collective/src/: aggregator.rs  constants.rs  engine.rs  errors.rs  insight.rs  lib.rs  observation.rs
crates/hydra-companion/: Cargo.toml
crates/hydra-companion/src/: companion.rs  constants.rs  errors.rs  lib.rs  service.rs  signal.rs  task.rs  task_queue.rs
crates/hydra-compiler/: Cargo.toml
crates/hydra-compiler/src/: ast.rs  compiler.rs  detector.rs  executor.rs  executor_tests.rs  lib.rs  normalizer.rs  router.rs
crates/hydra-compiler/tests/: compiler_tests.rs
crates/hydra-comprehension/: Cargo.toml
crates/hydra-comprehension/src/: constants.rs  domain.rs  engine.rs  errors.rs  lib.rs  loop_bridge.rs  output.rs  primitive.rs  resonance.rs  temporal.rs
crates/hydra-consent/: Cargo.toml
crates/hydra-consent/src/: audit.rs  constants.rs  engine.rs  errors.rs  grant.rs  lib.rs  registry.rs
crates/hydra-constitution/: Cargo.toml
crates/hydra-constitution/src/: checker.rs  constants.rs  declarations.rs  errors.rs  identity.rs  invariants.rs  lib.rs  receipt.rs  task.rs
crates/hydra-constitution/tests/: constitution.rs
crates/hydra-continuity/: Cargo.toml
crates/hydra-continuity/src/: arc.rs  checkpoint.rs  constants.rs  engine.rs  errors.rs  lib.rs
crates/hydra-core/: Cargo.toml
crates/hydra-core/src/: error.rs  lib.rs
crates/hydra-core/tests/: hardening_tests.rs  types_tests.rs
crates/hydra-crystallizer/: Cargo.toml
crates/hydra-crystallizer/src/: artifact.rs  constants.rs  engine.rs  errors.rs  generator.rs  lib.rs  source.rs
crates/hydra-db/: Cargo.toml
crates/hydra-db/src/: lib.rs  messages.rs  messages_tests.rs  schema.rs  schema_tables.rs  schema_tables_intelligence.rs  store.rs  store_code_index.rs  store_intelligence.rs  store_mutations.rs  store_queries.rs  store_queries_domain.rs  store_tests.rs  store_tests_extra.rs  store_types.rs
crates/hydra-db/tests/: db_tests.rs  message_tests.rs
crates/hydra-desktop/: Cargo.toml
crates/hydra-desktop/src/: accessibility.rs  agent.rs  agent_amm.rs  app.rs  app_chat.rs  app_chat_input.rs  app_engines.rs  app_ghost.rs  app_handlers.rs  app_handlers_cognitive.rs  app_init_settings.rs  app_model.rs  app_overlays.rs  app_profile.rs  app_rsx.rs  app_rsx_chat_body.rs  app_rsx_chat_controls.rs  app_rsx_companion.rs  app_rsx_ghost_el.rs  app_rsx_overlays_el.rs  app_rsx_settings_a.rs  app_rsx_settings_about.rs  app_rsx_settings_about_data.rs  app_rsx_settings_advanced.rs  app_rsx_settings_b.rs  app_rsx_settings_behavior.rs  app_rsx_settings_mcp.rs  app_rsx_sidebar_el.rs  app_send_handler.rs  app_settings.rs  app_settings_more.rs  app_settings_sisters.rs  app_sidebar.rs  app_voice_trigger.rs  clipboard.rs  constants.rs  deps.rs  document.rs  errors.rs  gesture.rs  (+22 more)
crates/hydra-diplomat/: Cargo.toml
crates/hydra-diplomat/src/: constants.rs  engine.rs  errors.rs  lib.rs  session.rs  stance.rs  synthesis.rs
crates/hydra-environment/: Cargo.toml
crates/hydra-environment/src/: checker.rs  constants.rs  detector.rs  engine.rs  errors.rs  lib.rs  profile.rs  requirements.rs
crates/hydra-exchange/: Cargo.toml
(+2331 files in other folders)
