[package]
name = "animus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Animus Prime — Hydra's internal cognitive language and multi-target compiler"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
