[package]
name = "hydra-adversary"
version = "0.1.0"
edition = "2021"
description = "The immune system — antibodies, threat ecology, antifragile resistance."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution = { path = "../hydra-constitution" }
hydra-animus       = { path = "../hydra-animus" }
hydra-trust        = { path = "../hydra-trust" }
hydra-axiom        = { path = "../hydra-axiom" }

serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }

[[bin]]
name = "adversary_test_harness"
path = "src/bin/test_harness.rs"
