[package]
name = "hydra-antifragile"
version = "0.1.0"
edition = "2021"
description = "Obstacle resistance — Hydra grows stronger from every obstacle encountered."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution = { path = "../hydra-constitution" }
hydra-genome      = { path = "../hydra-genome" }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }

[[bin]]
name = "antifragile_test_harness"
path = "src/bin/test_harness.rs"
