[package]
name = "hydra-attention"
version = "0.1.0"
edition = "2021"
description = "Cognitive budget allocation — Hydra focuses on what matters."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution  = { path = "../hydra-constitution" }
hydra-comprehension = { path = "../hydra-comprehension" }
hydra-context       = { path = "../hydra-context" }
hydra-language      = { path = "../hydra-language" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
