[package]
name = "hydra-attribution"
version = "0.1.0"
edition = "2021"
description = "Causal cost tracing — why did things cost what they cost?"
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution  = { path = "../hydra-constitution" }
hydra-settlement    = { path = "../hydra-settlement" }
hydra-audit         = { path = "../hydra-audit" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
