[package]
name = "hydra-automation"
version = "0.1.0"
edition = "2021"
description = "Behavior crystallization — you do it, Hydra learns it."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution  = { path = "../hydra-constitution" }
hydra-executor      = { path = "../hydra-executor" }
hydra-genome        = { path = "../hydra-genome" }
hydra-soul          = { path = "../hydra-soul" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
