[package]
name = "hydra-autonomy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Graduated autonomy: trust scores, autonomy levels, trust earning and decaying"

[dependencies]
hydra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
