[package]
name = "hydra-belief"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Belief revision for agentic-hydra: learn from corrections, persist knowledge"

[dependencies]
hydra-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
futures = { workspace = true }
