[package]
name = "hydra-belief"
version = "0.1.0"
edition = "2021"
description = "AGM belief revision as geodesic flow on the manifold."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution = { path = "../hydra-constitution" }
hydra-animus       = { path = "../hydra-animus" }
hydra-memory       = { path = "../hydra-memory" }
hydra-axiom        = { path = "../hydra-axiom" }

serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
