[package]
name = "hydra-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
totp-rs = { workspace = true }
chromiumoxide = { workspace = true }
toml = { workspace = true }
futures = "0.3"

[[bin]]
name = "browser-harness"
path = "src/bin/test_harness.rs"
