[package]
name = "hydra-calibration"
version = "0.1.0"
edition = "2021"
description = "Epistemic calibration — Hydra knows where its judgment goes wrong."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution  = { path = "../hydra-constitution" }
hydra-genome        = { path = "../hydra-genome" }
hydra-soul          = { path = "../hydra-soul" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
rusqlite   = { workspace = true }
dirs       = { workspace = true }

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
