[package]
name = "hydra-cartography"
version = "0.1.0"
edition = "2021"
description = "Digital topology — mapping system environments and their relationships."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution = { path = "../hydra-constitution" }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }

[[bin]]
name = "cartography_test_harness"
path = "src/bin/test_harness.rs"
