[package]
description = "Hydra CLI — thin launcher for hydra-tui + subcommand dispatcher"
name = "hydra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Core crates (needed for subcommand dispatch)
hydra-core = { workspace = true }
hydra-native = { workspace = true }
hydra-runtime = { workspace = true }
hydra-db = { workspace = true }
hydra-federation = { workspace = true }
hydra-model = { workspace = true }

# HTTP client (for CLI subcommands)
ureq = { version = "2", features = ["json"] }
serde_json = { workspace = true }
serde = { workspace = true }

# Async runtime (for subcommands that need it)
tokio = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
hydra-pulse = { workspace = true }

# TUI launcher (find hydra-tui binary)
which = "7"
dirs-next = "2"
