[package]
name = "hydra-comprehension"
version = "0.1.0"
edition = "2021"
description = "The gateway to intelligence — lifts any input to meaning."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution = { path = "../hydra-constitution" }
hydra-animus       = { path = "../hydra-animus" }
hydra-axiom        = { path = "../hydra-axiom" }
hydra-temporal     = { path = "../hydra-temporal" }
hydra-genome       = { path = "../hydra-genome" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
