[package]
name = "hydra-consent"
version = "0.1.0"
edition = "2021"
description = "Fine-grained sharing consent — specific, versioned, revocable, audited."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution  = { path = "../hydra-constitution" }
hydra-federation    = { path = "../hydra-federation" }
hydra-consensus     = { path = "../hydra-consensus" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
sha2       = "0.10"
hex        = "0.4"

[[bin]]
name = "test_harness"
path = "src/bin/test_harness/main.rs"
