[package]
name = "hydra-constitution"
version = "0.1.0"
edition = "2021"
description = "The seven constitutional laws of Hydra. Immutable. Permanent."
authors = ["Agentra Labs"]

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
sha2        = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand        = "0.8"
hex         = "0.4"

[dev-dependencies]
proptest = "1"

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
