[package]
name = "hydra-continuity"
version = "0.1.0"
edition = "2021"
description = "Morphic signature persistence — the entity's arc made visible."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution  = { path = "../hydra-constitution" }
hydra-succession    = { path = "../hydra-succession" }
hydra-morphic       = { path = "../hydra-morphic" }
hydra-legacy        = { path = "../hydra-legacy" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
sha2       = "0.10"
hex        = "0.4"

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
