[package]
description = "Hydra Desktop app — Dioxus native interface"
name = "hydra-desktop"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[[bin]]
name = "hydra-desktop"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
hydra-native = { path = "../hydra-native", features = ["desktop"] }
cpal = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde_json = "1.0"
parking_lot = "0.12"
tracing = "0.1"
hydra-runtime = { path = "../hydra-runtime" }
hydra-db = { path = "../hydra-db" }
hydra-federation = { path = "../hydra-federation" }
hydra-model = { path = "../hydra-model" }
chrono = { workspace = true }
hydra-pulse = { path = "../hydra-pulse" }
hydra-monitor = { path = "../hydra-monitor" }
hydra-trace = { path = "../hydra-trace" }

# Desktop platform features
notify-rust = { version = "4", optional = true }
global-hotkey = { version = "0.6", optional = true }

[features]
default = ["notifications", "hotkey"]
notifications = ["dep:notify-rust"]
hotkey = ["dep:global-hotkey"]
