[package]
name = "hydra-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
hydra-browser = { path = "../hydra-browser" }
hydra-genome = { path = "../hydra-genome" }
toml = { workspace = true }

[[bin]]
name = "desktop-harness"
path = "src/bin/test_harness.rs"
