[package]
name = "hydra-exchange"
version = "0.1.0"
edition = "2021"
description = "Capability exchange — offer, request, execute, receipt."
authors = ["Agentra Labs"]

[dependencies]
hydra-constitution  = { path = "../hydra-constitution" }
hydra-settlement    = { path = "../hydra-settlement" }
hydra-trust         = { path = "../hydra-trust" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
sha2       = "0.10"
hex        = "0.4"

[[bin]]
name = "test_harness"
path = "src/bin/test_harness.rs"
